# rust_tui

./: Cargo.toml  db.json  readme.md
src/: app.rs  main.rs  ui.rs
