[package]
name = "rust_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }

thiserror = "1.0"
nalgebra = "0.32.0"
ratatui = "0.25.0"
